testsuite/poke.pkl/asm-stmt-diag-2.pk
/* { dg-do compile } */

var a = 10;

asm ("":
     a,
     1 + 2 /* { dg-error "l-value" } */
:
    );
